--- a/Learning/login/login.tex
+++ b/Learning/login/login.tex
@@ -2,7 +2,7 @@
 \label{Sub:auto-login}
 Tham khảo tại:
 
-\textsf{http://www.raspberrypi-spy.co.uk/2015/02/how-to-autorun-a-python-script-on-raspberry-pi-boot/}
+\textsf{http://www.raspberrypi-spy.co.uk/2015/02/how-to-autorun-a-python-script-on-raspberry-pi-boot/}\\
 %\begin{footnotesize}
 %\verb|http://www.raspberrypi-spy.co.uk/2015/02/how-to-autorun-a-python-script-on-raspberry-pi-boot/|
 %\end{footnotesize}
