--- a/Learning/network/network-pi.tex
+++ b/Learning/network/network-pi.tex
@@ -104,18 +104,18 @@ Thực hiện theo các bước sau:
 \caption{Điền tên trong ô \textsf{Connection name}}
 \end{center}
 \end{figure}
-\item Chọn tab \verb|IPv6 Settings|, chọn \verb|Method| là \verb|Automactic|:
+\item Chọn tab \verb|IPv6 Settings|, chọn \verb|Method| là \verb|Automactic|: hình \ref{Fig:IPv6 Settings}.
 \begin{figure}[!h]
 \begin{center}
 {\includegraphics[scale=.4]{network/images/share-wifi-5}}
-\caption{Chọn tab \textsf{IPv6 Settings}, chọn \textsf{Method} là \textsf{Automactic}}
+\caption{Chọn tab \textsf{IPv6 Settings}, chọn \textsf{Method} là \textsf{Automactic}}\label{Fig:IPv6 Settings}
 \end{center}
 \end{figure}
-\item Chọn tab \verb|IPv4 Settings|, chọn \verb|Method| là \verb|Share to orther computers|:
+\item Chọn tab \verb|IPv4 Settings|, chọn \verb|Method| là \verb|Share to orther computers|: hình \ref{Fig:IPv4 Settings}.
 \begin{figure}[!h]
 \begin{center}
 {\includegraphics[scale=.5]{network/images/share-wifi-6}}
-\caption{Chọn tab \textsf{IPv6 Settings}, chọn \textsf{Method} là \textsf{Share to orther computers}}
+\caption{Chọn tab \textsf{IPv6 Settings}, chọn \textsf{Method} là \textsf{Share to orther computers}}\label{Fig:IPv4 Settings}
 \end{center}
 \end{figure}
 \item Chọn \verb|Save| rồi chọn \verb|Close|.
