--- a/Learning/run-script-python/run-script-python.tex
+++ b/Learning/run-script-python/run-script-python.tex
@@ -73,9 +73,7 @@ Ta có thể thay thế 1 trong 5 tham số trên bằng các tham số dưới 
 \subsection{Sử dụng profile}
 Tham khảo tại:
 
-\begin{footnotesize}
-\verb|http://www.raspberrypi-spy.co.uk/2015/02/how-to-autorun-a-python-script-on-raspberry-pi-boot/|
-\end{footnotesize}
+\textsf{http://www.raspberrypi-spy.co.uk/2015/02/how-to-autorun-a-python-script-on-raspberry-pi-boot/}\\
 
 Thực hiện theo các bước sau:
 \begin{itemize}
@@ -95,9 +93,7 @@ Ký hiệu \verb|&| có nghĩa là file \verb|myfile.py| sẽ chạy nền.
 \subsection{Sử dụng cron kết hợp với tạo file .sh}
 Tham khảo tại:
 
-\begin{footnotesize}
-\verb|http://www.instructables.com/id/Raspberry-Pi-Launch-Python-script-on-startup/?ALLSTEPS|
-\end{footnotesize}
+\textsf{http://www.instructables.com/id/Raspberry-Pi-Launch-Python-script-on-startup/?ALLSTEPS}\\
 
 Thực hiện theo các bước sau:
 \begin{itemize}
