--- a/Learning/network/network-pi.tex
+++ b/Learning/network/network-pi.tex
@@ -13,7 +13,7 @@ Trong phần này, mình sử dụng USB Wifi TP Link 725N
 \begin{center}
 \includegraphics[scale=.3]{network/images/TL-WN725N}
 \end{center}
-\caption{USB Wifi TL-WN725N}
+\caption{USB Wifi TL -- WN725N}
 \end{figure}
 \subsection{Cài đặt Driver}
 Tham khảo tại: \verb|https://www.raspberrypi.org/forums/viewtopic.php?p=462982|
