--- a/Learning/remote/remote-pi.tex
+++ b/Learning/remote/remote-pi.tex
@@ -111,7 +111,7 @@ sudo apt-get install xrdp
 \begin{list}{+}{}
 \item \verb|Host|: điền địa chỉ IP.
 \item \verb|Username|: tên cần đăng nhập.
-\item \verb|Passwork|: mật khẩu đăng nhập cho tài khoản ở ô \verb|Username|.
+\item \verb|Password|: mật khẩu đăng nhập cho tài khoản ở ô \verb|Username|.
 \item \verb|Port|: điền số 22.
 \end{list}
 \item[$\ast$] Ta cũng cần nhập vào thông tin như trên để truy cập được Pi.
