--- a/Learning/LPi.tex
+++ b/Learning/LPi.tex
@@ -36,6 +36,7 @@
 %\input{title-page.tex}
 %\input{install-pi/Install-Pi-OS.tex}
 \tableofcontents
+\input{setup-os/setup-os}
 \input{remote/remote-pi.tex}
 \input{network/network-pi.tex}
 \input{login/login.tex}
